@@ -1,3 +1,7 @@
+2010-07-23  Tolleiv Nietsch <nietsch@aoemedia.de>
+
+	* Fixed issue: #15209: mod1 -> render_singleSheet uses html table for "styling" 
+
 2010-07-20  Tolleiv Nietsch <nietsch@aoemedia.de>
 
 	* Fixed issue: #3903: ACL problem: "edit content" doesn't work (Thanks to Bernhard Kraft)
